# databricks-genai-examples

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  skills-lock.json
agents/: README.md
agents/agent-job-run/: .gitignore  README.md  main.py  pyproject.toml
agents/agent-job-run/src/: config.template.yaml  job_tools.py  planner_agent.py  prompts.py  requirements.txt  researcher_agent.py  researcher_agent_legacy.py
agents/agent-job-run/src/models/: __init__.py  research_plan.py  research_state.py
agents/agent-job-run/src/notebooks/: 01_demo.ipynb  02_researcher_job.py
agents/agent-job-run/src/sdk/: __init__.py  config.py  context.py  planner_agent.py  report.py  researcher_agent.py
agents/genie-migration/: .gitignore  README.md  azure-pipelines.yml  databricks.yml.template  pyproject.toml  requirements.txt
agents/genie-migration/docs/: SETUP_GUIDE.md
agents/genie-migration/genie_spaces/: my_space.json
agents/genie-migration/scripts/: deploy_genie_space.py  export_genie_space.py
batch-inference/: .gitignore  requirements.txt
batch-inference-cpu-models/: Manual Parallel Batching to Model Endpoint.py
context-engineering/: README.md
evals/: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
feature-store/: 00_dummy-data-creation.py  01_declarative_api_offline_batch.py  01_declarative_features_api.py  02_declarative_api_online_serving.py  03_declarative_feature_spec_serving.py  README.md
fine-tuning/: .gitignore
model-serving/: CLAUDE.md
structured-extraction-with-llm/: 00_introduction.ipynb  (+1 more)
vector-search/: multi-index-search.py
(+289 files in other folders)
